--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
   <header>
     <div class="container-fluid">
-      <div class="logo"></div>
+      <div class="logo">
+        LOGONE
+      </div>
       <nav>
         <p>Seleziona la difficoltà:</p>
         <select id="elements" class="form-select" aria-label="Default select example">
